--- a/src/app/income/income.component.html
+++ b/src/app/income/income.component.html
@@ -1,11 +1,3 @@
-<div class="mt-5 mx-3 flex align-center justify-between">
-  <button type="button" mat-flat-button matStepperPrevious color="accent">
-    <mat-icon>arrow_backward</mat-icon>Back
-  </button>
-  <button type="button" mat-flat-button matStepperNext color="primary">Next
-    <mat-icon>arrow_forward</mat-icon>
-  </button>
-</div>
 <form [formGroup]="incomeDetails">
   <div class="pt-5  flex align-center justify-start flex-wrap w-full">
     <mat-form-field appearance="outline" class="w-full md:w-1/2 lg:w-1/3 xl:w-1/4 px-2">
@@ -62,5 +54,13 @@
         Interest income is required.
       </mat-error>
     </mat-form-field>
+  </div>
+  <div class="mt-5 mx-3 flex align-center justify-center gap-5">
+    <button type="button" mat-flat-button matStepperPrevious color="accent">
+      <mat-icon>arrow_upward</mat-icon>Previous
+    </button>
+    <button type="button" mat-flat-button matStepperNext color="primary">Next
+      <mat-icon>arrow_downward</mat-icon>
+    </button>
   </div>
 </form>
